--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ clone_depth: 10
 environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  VARIANTS: generic # NOTE: When modifying variants, don't forget to update ASF_VARIANT definitions in ASF.cs!
+  VARIANTS: generic linux-x64 # NOTE: When modifying variants, don't forget to update ASF_VARIANT definitions in ASF.cs!
 matrix:
   fast_finish: true
 before_build:
